--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
 body{
     font-family: monospace;
     text-align:center;
-    background: gold;
+    background: rgb(31, 179, 14);
   }
   header{
-    background: gold;
+    background: rgb(29, 229, 23);
     text-align: center;
-    font-size: 30px;
+    font-size: 37px;
+    font-family: "Ranga", serif;
+    font-weight: 700;
+    font-style: normal;
     margin-bottom: 10px;
     padding: 15px;
   }
@@ -14,6 +17,12 @@ body{
     cursor: pointer;
   }
   
+  h2{
+    font-family: "Ranga", serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 20; 
+  }
   
   .column{
     text-align: center;
@@ -43,11 +52,18 @@ body{
     cursor: pointer;
   }
   #Word_1{
-    font-size: 30px; 
+    font-size: 50px; 
+    font-family: "Ranga", serif;
+    font-weight: 700;
+    font-style: normal;
   
   }
   #Word_2{
-    font-size: 30px; 
+    font-size: 50px; 
+    font-family: "Ranga", serif;
+    font-weight: 700;
+    font-style: normal;
+
   }
 
   #back_to_home{
