--- a/minigame.css
+++ b/minigame.css
@@ -36,7 +36,7 @@ body{
     background-color: white;
     display: flex; 
     flex-wrap: wrap;
-    border: 1px solid;;
+    border: 1px solid;
   }
   * {
     box-sizing: border-box;
@@ -56,7 +56,7 @@ body{
     font-weight: 700;
     font-style: normal;
     cursor: pointer;
-  
+
   }
   #Word_2{
     font-size: 50px; 
@@ -64,7 +64,6 @@ body{
     font-weight: 700;
     font-style: normal;
     cursor: pointer;
-
   }
   #back_to_home{
     font-size: 50px;
